# apilens

./: .dockerignore  .env.example  .gitignore  FOLLOWUPS.md  README.md  ROADMAP.md  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.github/: dependabot.yml
apps/ingest/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/ingest/app/: auth.py  config.py  db.py  ingest.py  main.py  schemas.py
apps/ingest/scripts/: start.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/api/: router.py
backend/api/apps/: router.py  schemas.py
backend/api/auth/: router.py  schemas.py
backend/api/ingest/: router.py  schemas.py
backend/api/projects/: router.py  schemas.py
backend/api/users/: router.py  schemas.py
backend/apps/auth/: admin.py  apps.py  authentication.py  managers.py  models.py  services.py
backend/apps/auth/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0003_refreshtoken_location.py  0004_apikey.py
backend/apps/auth/services/: __init__.py  passkey.py  password_reset.py  two_factor.py
backend/apps/projects/: models.py  services.py  validators.py
backend/apps/projects/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: apps.py  services.py  signals.py
backend/apps/users/migrations/: 0001_initial.py  0002_remove_user_auth0_connection_remove_user_auth0_id_and_more.py  0003_alter_user_picture.py  0004_fix_unusable_passwords.py
backend/config/: settings.py  urls.py
backend/core/auth/: __init__.py  authentication.py  context.py
docs/: docs.json  (+3 more)
(+444 files in other folders)
